# xmap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  python.yml  stale.yml
benchmarks/: CMakeLists.txt  bench_xmap.cpp
include/xmap/: xmap.h  xmap.hpp
python/: CMakeLists.txt  xmap.py  xmap_ext.pyi
python/src/: CMakeLists.txt  xmap_py.cpp
python/tests/: test_file.py  test_ipc.py
src/: xmap_posix.c  xmap_win32.c
tests/: CMakeLists.txt  test_ipc.cpp  test_xmap.cpp
